--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,8 @@
+<html>
+<head><title>Privacy Policy</title></head>
+<body>
+    <h1>Privacy Policy</h1>
+    <p>We respect your privacy and do not collect any unnecessary data.</p>
+</body>
+</html>
 
