--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,8 @@
     <title>Terms of Service</title>
 </head>
 <body>
+    <p>tiktok-developers-site-verification=VZY7bL9S5SMSI4UTfEixAXrg9cXlCVE</p>
+
     <h1>Terms of Service for TikTok Data Fetcher</h1>
     <h2>1. Introduction</h2>
     <p>Welcome to TikTok Data Fetcher. By using this service, you agree to comply with these terms.</p>
